# kosmorro-lite

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: appimage.yml  e2e.yml  tests.yml
.scripts/: tests-e2e.sh
_kosmorro/: __version__.py  dumper.py  main.py
kosmorro/: exceptions.py  main.py
tests/: general.py
