[tool.poetry]
name = "kosmorro"
version = "0.10.9"
description = "A program to compute the ephemerides."
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "AGPL-3.0-or-later"

include = [
    "CHANGELOG.md",
    "kosmorro/locales/*/LC_MESSAGES/*.mo",
    "kosmorro/assets",
    "manpage/kosmorro.1",
    "manpage/kosmorro.7",
]

[tool.poetry.scripts]
kosmorro = "kosmorro.main:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tabulate = "^0.8.9"
termcolor = "^1.1.0"
kosmorrolib = "^1.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
Babel = "^2.9.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
